trunk/Archive2/a5/325c08b7e202c7/output
main.cpp: In function 'int main()':
main.cpp:5:36: error: must #include <typeinfo> before using typeid
     std::cout << typeid(true ? 1 : 1.0).name() << std::endl;
                                    ^
main.cpp:6:37: error: must #include <typeinfo> before using typeid
     std::cout << typeid(false ? 1 : 1.0).name() << std::endl;
                                     ^
